# ble

./: .gitignore  README.md  main_README.md
ble_app/: AndroidManifest.xml  pubspec.yaml
ble_app/lib/: global.dart  main.dart
ble_app/lib/screens/: ble_scan.dart  ble_screen.dart  help.dart  my_ble.dart  page4.dart
picow/: CMakeLists.txt  README.md
picow/example/: CMakeLists.txt  example.c
picow/include/: ble.h  ili9341.h  max7219.h  my_pwm.h  opto.h  process.h  servo.h  user_functions.h  ws2812.h
picow/src/: ble.c  ili9341.c  max7219.c  my_pwm.c  opto.c  process.c  servo.c  user_functions.c  ws2812.c
